# Cpp_Raytracer

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  imgui.ini  main.cpp
boing.app/Contents/: Info.plist
empty.app/Contents/: Info.plist
gamma.app/Contents/: Info.plist
gears.app/Contents/: Info.plist
heightmap.app/Contents/: Info.plist
icon.app/Contents/: Info.plist
include/: binarytree.h  bounding_volume.h  bvh.h  camera.h  envmap.h  gui.h  mesh.h  parser.h  pathtracer.h  plane.h  quadtree.h  ray.h  render.h  sampler.h  triangle.h
include/materials/: material.h  material_conductor.h  material_dielectric.h  perfect_material.h
inputlag.app/Contents/: Info.plist
joysticks.app/Contents/: Info.plist
main/: gui.cpp  main.cpp  ppg.cpp
opacity.app/Contents/: Info.plist
particles.app/Contents/: Info.plist
sharing.app/Contents/: Info.plist
simple.app/Contents/: Info.plist
splitview.app/Contents/: Info.plist
tearing.app/Contents/: Info.plist
threads.app/Contents/: Info.plist
timeout.app/Contents/: Info.plist
title.app/Contents/: Info.plist
wave.app/Contents/: Info.plist
windows.app/Contents/: Info.plist
